@@ -355,6 +355,14 @@ with a string literal.</p>
 <p><b>Rationale</b>: Subscripts are intended as a simple mechanism to
 break up large scripts until loadable user-defined packages are completed.</p>
 
+<h3>Abstract Procedures and Functions</h3>
+
+<p>Abstract procedures and functions are subprograms that can be defined
+but not run.  They might be abstract because they are incomplete prototypes.</p>
+
+<p>They are created by including the word <b>abstract</b> after the word
+<b>procedure</b> or </b>function</b>.</p>
+
 <h3>Exceptions</h3>
 
 <p>Procedures, functions, declare blocks or main programs can have an
